# icarus-fm

./: .gitignore  BUILD_AND_RELEASE.md  DISTRIBUTION_SUMMARY.md  PREVIEW_PANE_IMPLEMENTATION_PLAN.md  README.md  config.h.meson.in  install-icarus-fm.sh  meson.build
action-layout-editor/: meson.build
data/: dbus-interfaces.xml  meson.build  nemo-autorun-software.desktop.in  nemo-autostart.desktop.in  nemo.FileManager1.service.in  nemo.desktop.in  nemo.service.in  org.nemo.root.policy.in
data/icons/: meson.build
debian/: changelog  control  icarus-fm-data.install  icarus-fm.install  libicarus-fm-extension-dev.install  libicarus-fm-extension1.install  rules
debian/nemo-preview/DEBIAN/: control  md5sums
debian/nemo-preview/usr/lib/x86_64-linux-gnu/nemo/: nemo-extensions-list
debian/nemo-preview/usr/share/applications/: nemo-autorun-software.desktop
debian/source/: options
docs/: PREVIEW_PANE_CHANGELOG.md  meson.build  video-preview-setup.md
docs/reference/libnemo-extension/: meson.build
files/: meson.build
libnemo-extension/: meson.build  nemo-desktop-preferences.c
libnemo-private/: meson.build  nemo-action-manager.c  nemo-dbus-manager.c  nemo-file-utilities.c  nemo-global-preferences.c  nemo-module.c  org.icarus-fm.gschema.xml
search-helpers/: epub2text.nemo_search_helper  meson.build  mso-ppt.nemo_search_helper  mso-xls.nemo_search_helper  mso.nemo_search_helper  odf.nemo_search_helper
src/: meson.build  nemo-action-config-widget.c  nemo-bookmark-list.c  nemo-desktop-application.c  nemo-desktop-main.c  nemo-desktop-manager.c  nemo-extension-config-widget.c  nemo-main-application.c  nemo-main.c  nemo-mime-actions.c  nemo-previewer.c  nemo-view.c  nemo-window-menus.c  nemo-window-slot.c  nemo-window-slot.h
